apps/cloud-demo-app/TST/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-demo-app-TST-deployment
  namespace: cloud-demo-app
  labels:
    app: cloud-demo-app-deployment
spec:
  selector:
    matchLabels:
      app: cloud-demo-app-TST-pod-app # Selector to match Pods managed by this Deployment
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
  template: # Template for the Pods that the Deployment will create
    metadata:
      labels:
        app: cloud-demo-app-TST-pod-app # Label to match the Service selector (same as in your Pod YAML)
    spec:
      containers:
      - name: cloud-demo-app-TST-container
        image: eu-frankfurt-1.ocir.io/frfasywgafrn/cloud-demo-app/cloud-demo-app:master-12d4cf42-1741813578 # {"$imagepolicy": "cloud-demo-app:cloud-demo-app-image-policy"}
        ports:
        - containerPort: 8080
        resources: # Add resources section here
          requests: # Initial resource request (guaranteed)
            cpu: 100m # 100 millicores (0.1 CPU)
            memory: 256Mi # 256 Mebibytes of memory
          limits: # Maximum resource limit (enforced)
            cpu: 500m # 500 millicores (0.5 CPU)
            memory: 512Mi # 512 Mebibytes of memory
      imagePullSecrets:
      - name: oracle-registry-secret
