apps/cloud-demo-app/TST/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-demo-app-TST-service
  namespace: cloud-demo-app
  labels:
    app: cloud-demo-app-TST-pod-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: cloud-demo-app-TST-pod-app
